<resources>
    <string name="app_name">CallAtGame</string>

    <!-- Keys -->
    <string name="google_auth_clientid">737290334249-d8hk968us31rvitc3fvnp7g1rp8i21er.apps.googleusercontent.com</string>

    <!-- Common -->
    <string name="netword_unavailable_generic_error">Vous n\'êtes pas connecté à Internet. Veuillez rétablir votre connexion pour continuer.</string>
    <string name="unexcepted_generic_error">Une erreur inattendue est survenu</string>
    <string name="cancel">Fermer</string>

    <!-- SplashScreen Activity -->
    <string name="version_string">Version : </string>

    <!-- Starter Activity -->
    <string name="email_confirmed">Votre email à été confirmé.</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_email">Email</string>
    <string name="mandatory_field_message">Ce champ est obligatoire</string>
    <string name="email_incorrect_format_message">Format d\'email incorrect</string>
    <string name="password_not_secured_message">Le mot de passe saisi ne respecte pas les règles de sécurité</string>

    <!-- login fragment -->
    <string name="login_button">Connexion</string>
    <string name="or">ou connectez-vous avec</string>
    <string name="create_new_account">Créer un nouveau compte</string>

    <!-- signup fragment -->
    <string name="connect_now">Me connecter</string>
    <string name="signup_button">Inscription</string>

    <!-- Email sent fragment -->
    <string name="open_email_client_description">Ouvrez votre boite mail pour valider votre email.</string>
    <string name="open_my_mail_client">Ouvrir ma boite email</string>
    <string name="choose_email">Choisissez votre client mail</string>
    <string name="insuffisant_length_password">Votre mot de passe doit contenir au moins 6 caractères</string>

    <!-- Bottom navigation menu -->
    <string name="bottom_navigation_menu_profile">Mon profile</string>
    <string name="bottom_navigation_menu_games">Mes matchs</string>
    <string name="bottom_navigation_menu_rank">Classement</string>

    <!-- Fragment Profile -->
    <string name="personal_data">Mes informations personnelles</string>
    <string name="personal_data_email">Email :</string>
    <string name="personal_data_gender">Sexe :</string>
    <string name="personal_data_name">Nom :</string>
    <string name="personal_data_firstname">Prénom :</string>
    <string name="personal_data_dob">Date de naissance :</string>
    <string name="stats_title">Mes attributs</string>
    <string name="size_stat">Taille :</string>
    <string name="weight_stat">Poid :</string>
    <string name="attack_stat">Attaque :</string>
    <string name="defense_stat">Défense :</string>
    <string name="precision_stat">Shoot :</string>
    <string name="speed_stat">Vitesse :</string>
    <string name="stamina_stat">Endurance :</string>
    <string name="technic_stat">Technique :</string>
    <string name="disconect">Se déconnecter</string>
    <string name="free_editing_title">Editez votre %1$s</string>
    <string name="our_size_hint">Votre taille (en cm)</string>
    <string name="our_weight_hint">Votre poid (en kg)</string>
    <string name="standart_hint">"Saisissez "</string>
    <string name="validate">Valider</string>
    <string name="cm">%1$scm</string>
    <string name="kg">%1$skg</string>

    <string name="male">Homme</string>
    <string name="female">Femme</string>

    <string-array name="genders_array">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>

    <string-array name="level_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


</resources>
