<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/padding_standard"
    android:paddingEnd="@dimen/padding_standard">

    <com.callatgame.frag.common.ui.ImprovedTextInputLayout
        android:id="@+id/email_textinputlayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:drawableEnd="@drawable/ic_user"
            android:drawableTint="@android:color/white"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress" />
    </com.callatgame.frag.common.ui.ImprovedTextInputLayout>

    <com.callatgame.frag.common.ui.ImprovedTextInputLayout
        android:id="@+id/password_textinputlayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/email_textinputlayout"
        app:layout_constraintTop_toBottomOf="@+id/email_textinputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableTint="@android:color/white"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.callatgame.frag.common.ui.ImprovedTextInputLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_standard"
        style="@style/FullButtonStyle"
        android:text="@string/signup_button"
        android:elevation="6dp"
        android:shadowColor="@color/darktextColor"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/password_textinputlayout"
        app:layout_constraintRight_toRightOf="@+id/password_textinputlayout"
        app:layout_constraintTop_toBottomOf="@+id/password_textinputlayout" />

    <TextView
        android:id="@+id/sign_up_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/connect_now"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_standard"
        android:textColor="@android:color/white"
        android:elevation="3dp"
        android:shadowColor="@color/darktextColor"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>