<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/padding_standard"
    android:paddingEnd="@dimen/padding_standard">

    <com.callatgame.frag.common.ui.ImprovedTextInputLayout
        android:id="@+id/email_textinputlayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:drawableEnd="@drawable/ic_user"
            android:drawableTint="@android:color/white"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress" />
    </com.callatgame.frag.common.ui.ImprovedTextInputLayout>


    <com.callatgame.frag.common.ui.ImprovedTextInputLayout
        android:id="@+id/password_textinputlayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/email_textinputlayout"
        app:layout_constraintTop_toBottomOf="@+id/email_textinputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableTint="@android:color/white"
            style="@style/TextInputEditText"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.callatgame.frag.common.ui.ImprovedTextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_standard"
        style="@style/FullButtonStyle"
        android:text="@string/login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textinputlayout"
        android:elevation="6dp"
        android:shadowColor="@color/darktextColor"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"/>

    <TextView
        android:id="@+id/create_account_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/create_new_account"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_standard"
        android:textColor="@android:color/white"
        android:elevation="3dp"
        android:shadowColor="@color/darktextColor"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!--<com.facebook.login.widget.LoginButton
    android:id="@+id/facebookButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        app:com_facebook_login_text="Facebook"
        app:layout_constraintBottom_toBottomOf="@+id/googleButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/googleButton"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/create_account_text_button"

        app:layout_constraintGuide_percent="0.5" />-->





    <TextView
        android:id="@+id/optionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/create_account_text_button"
        app:layout_constraintHeight_min="@dimen/small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/leftLineView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/optionTextView"
        app:layout_constraintLeft_toRightOf="@+id/optionTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/optionTextView" />

    <View
        android:id="@+id/rightLineView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/optionTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/optionTextView"
        app:layout_constraintTop_toTopOf="@+id/optionTextView"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleButton"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_marginStart="@dimen/small"
        app:layout_constraintTop_toBottomOf="@+id/optionTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_min="@dimen/small" />
</androidx.constraintlayout.widget.ConstraintLayout>